k8s/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: auth-service
  template:
    metadata:
      labels:
        component: auth-service
    spec:
      containers:
        - name: auth-service
          image: mohammededris/class-track-auth-service:latest
          ports:
            - containerPort: 5001
