k8s/mongodb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mongodb
  template: # ---> Pod definition starts here
    metadata:
      labels:
        component: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:6-jammy
          ports:
            - containerPort: 27017
          volumeMounts: # ---> Belongs strictly inside the container
            - name: mongodb-data
              mountPath: /data/db
      volumes: # ---> Belongs strictly inside spec.template.spec
        - name: mongodb-data
          persistentVolumeClaim:
            claimName: mongodb-pvc
