k8s/staff-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: staff-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: staff-service
  template:
    metadata:
      labels:
        component: staff-service
    spec:
      containers:
        - name: staff-service
          image: omarmo20/class-track-staff-service:latest
          ports:
            - containerPort: 5002
