k8s/student-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: student-service-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: student-service
  template:
    metadata:
      labels:
        component: student-service
    spec:
      containers:
        - name: student-service
          image: omarmo20/class-track-student-service:latest
          ports:
            - containerPort: 5003
