k8s/api-gateway-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: api-gateway
  ports:
    - port: 5000
      targetPort: 5000
