k8s/auth-service-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: auth-service
  ports:
    - port: 5001
      targetPort: 5001
