k8s/staff-service-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: staff-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: staff-service
  ports:
    - port: 5002
      targetPort: 5002
