k8s/student-service-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-service-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: student-service
  ports:
    - port: 5003
      targetPort: 5003
